--- a/eplipl.tex
+++ b/eplipl.tex
@@ -55,7 +55,7 @@ data Term = Struct Atom [Term]
       deriving (Eq, Data, Typeable)
 \end{minted}
 
-The above can be described as concrete syntax for the "new" language and can be used to write a program.
+The above can be described as concrete syntax for the \yyy{"}{``}new\yyy{"}{''} language and can be used to write a program.
 
 
 As discussed in the
