--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -23,8 +23,8 @@ Turns out that there are a number of notions which play a role in deciding where
 Many a times a language ends up being a part of almost all paradigms due extensive libraries.
 Simply speaking, a multi-paradigm programming language is a programming language that supports more than one
 programming paradigm \cite{Krishnamurthi:2008:TPL:1480828.1480846}, more over as Timothy Budd puts it
-\cite{website:wikimultiparadigm} "The idea of a multi paradigm language is to provide a framework in which
-programmers can work in a variety of styles, freely intermixing constructs from different paradigms."
+\cite{website:wikimultiparadigm} \yyy{"}{``}The idea of a multi paradigm language is to provide a framework in which
+programmers can work in a variety of styles, freely intermixing constructs from different paradigms.\yyy{"}{''}
 
 
 
