--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -42,7 +42,7 @@ concepts, but are not complete.
 \end{enumerate}
 
 And as far as the idea of merging paradigms goes, it is not the main focus of this thesis and can be more of an
-"add-on".
+\yyy{"}{``}add-on\yyy{"}{''}.
 A handful of crossover hybrid languages based on \progLang{Haskell} exist, \progLang{Curry} \cite{website:curry}
 being the prominent one.
 Moving away from \progLang{Haskell} and exploring other languages from different paradigms, a respectable number of
