--- a/proto3.tex
+++ b/proto3.tex
@@ -23,7 +23,7 @@ variable search strategy
 
 
 \section{Unification}
-The first, "unification," regards how terms are matched and variables assigned to make terms match. \cite{website:prologunification}
+The first, \yyy{"}{``}unification,\yyy{"}{''} regards how terms are matched and variables assigned to make terms match. \cite{website:prologunification}
 
 
 
@@ -56,7 +56,7 @@ import Prolog
 import st
 import Interact
 
-version = "stack based"
+version = \yyy{"}{``}stack based\yyy{"}{''}
 
 --- Calculation of solutions:
 
