--- a/proto4.tex
+++ b/proto4.tex
@@ -12,7 +12,7 @@
 
 Our aim to embedd IO into the DSL
 
-So something like a "data" declaration for IO operations
+So something like a \yyy{"}{``}data\yyy{"}{''} declaration for IO operations
 
 \section{I/O is pure}
 
