--- a/quasiquotation.tex
+++ b/quasiquotation.tex
@@ -54,7 +54,7 @@ language on itself’. Quotation is one such device. It is our primary meta-ling
 \item \cite{website:quasiquotationfreedictionary}
 
 a metalinguistic device for referring to the form of an expression containing variables without referring to the symbols for those 
-variables. Thus while "not p" refers to the expression consisting of the word not followed by the letter p, the quasi-quotation \newline
+variables. Thus while \yyy{"}{``}not p\yyy{"}{''} refers to the expression consisting of the word not followed by the letter p, the quasi-quotation \newline
 $\ulcorner$ not p $\urcorner$ refers to the form of any expression consisting of the word not followed by any value of the variable p.
 
 \item  Quasiquotation Wikipedia, \cite{wikiquasi}
