--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -7,12 +7,12 @@
 
 \section{About this chapter}
 This chapter attempts to infuse the generic methodology from \ref{proto1} in a current \progLang{Prolog} implementation \cite{prolog-lib}
-and make the unification "monadic".
+and make the unification \yyy{"}{``}monadic\yyy{"}{''}.
 
 \section{How prolog-0.2.0.1 works}
 
 As described in the previous chapter about extending languages to incorporate functionality, this prototype applies the procedure to the
-eDSL in \cite{prolog-lib}. 
+eDSL in \cite{prolog-lib}.
 
 The original abstract syntax used by the library,
 \begin{figure}
@@ -25,7 +25,7 @@ type Atom         = String
 
 data Term = Struct Atom [Term]
           | Var VariableName
-          | Wildcard -- Don't cares 
+          | Wildcard -- Don't cares
           | Cut Int
       deriving (Eq, Data, Typeable)
 
@@ -35,14 +35,14 @@ data Clause = Clause { lhs :: Term, rhs_ :: [Goal] }
 
 type Goal         = Term
 type Program      = [Clause]
-\end{minted} 
+\end{minted}
 \caption{Current Language Implementation}
 \label{tab:currlangimpl}
 \end{figure}
 
-From the Figure~\ref{tab:currlangimpl} we will focus on the \textit{Term} since the others just add wrappers around expressions which can 
-be created by it. The above language suffers from most of the problems discussed in the previous chapter. The above is used to construct 
-\progLang{Prolog} "terms" which are of a "single type".   
+From the Figure~\ref{tab:currlangimpl} we will focus on the \textit{Term} since the others just add wrappers around expressions which can
+be created by it. The above language suffers from most of the problems discussed in the previous chapter. The above is used to construct
+\progLang{Prolog} \yyy{"}{``}terms\yyy{"}{''} which are of a \yyy{"}{``}single type\yyy{"}{''}.
 
 
 The implementation consists of components that one would find in a Language Processing System \ref{fig:A language-processing system},
@@ -52,7 +52,7 @@ The implementation consists of components that one would find in a Language Proc
 \includegraphics[scale = 0.7]{Language_Processing_System.png}
 \caption{A language-processing system \cite{Aho:1986:CPT:6448}}
 \label{fig:A language-processing system}
-\end{figure}  
+\end{figure}
 
 specifically speaking, parts of a compiler \ref{fig:Phases of Compiler},
 
@@ -61,9 +61,9 @@ specifically speaking, parts of a compiler \ref{fig:Phases of Compiler},
 \includegraphics[scale = 0.7]{Phases_of_compiler.jpg}
 \caption{Phases of Compiler \cite{Aho:1986:CPT:6448}}
 \label{fig:Phases of Compiler}
-\end{figure}  
+\end{figure}
 
-The architecture for a compiler as described in \ref{fig:Phases of Compiler} would not be needed since \progLang{Haskell} provides most of 
+The architecture for a compiler as described in \ref{fig:Phases of Compiler} would not be needed since \progLang{Haskell} provides most of
 them. Nonetheless, the library has the following major components,
 
 \begin{enumerate}
@@ -77,12 +77,12 @@ them. Nonetheless, the library has the following major components,
 
 \item Unifier.
 
-\item REPL. 
+\item REPL.
 \end{enumerate}
 
-To prove the modularity of the approach for language modification and monadic unification only the abstract syntax and unifier will be 
-customized.  
- 
+To prove the modularity of the approach for language modification and monadic unification only the abstract syntax and unifier will be
+customized.
+
 
 
 \section{What we do in this prototype?}
@@ -90,22 +90,22 @@ In the first prototype we just did unification of two terms not query resolution
 
 We do complete \progLang{Prolog} query resolution like stuff.
 
-\ref{proto1} provides a generic procedure / methodology to convert a language into monadic unifiable form 
+\ref{proto1} provides a generic procedure / methodology to convert a language into monadic unifiable form
 
 
 \section{Current implementation (prolog-0.2.0.1)}
 
-Beginning with language from Figure~\ref{tab:currlangimpl} is transformed into an isomorphically equivalent definition described in 
+Beginning with language from Figure~\ref{tab:currlangimpl} is transformed into an isomorphically equivalent definition described in
 Figure~\ref{tab:flatgrp0201}
 \begin{figure}][h]
 \begin{minted}[linenos]{haskell}
-data FTS a = FS Atom [a] | FV VariableName | FW | FC Int 
+data FTS a = FS Atom [a] | FV VariableName | FW | FC Int
                           deriving (Show, Eq, Typeable, Ord)
 
-newtype Prolog = P (Fix FTS) deriving (Eq, Show, Ord, Typeable) 
+newtype Prolog = P (Fix FTS) deriving (Eq, Show, Ord, Typeable)
 
 unP :: Prolog -> Fix FTS
-unP (P x) = x 
+unP (P x) = x
 \end{minted}
 \caption{Flattened (non-recursive) grammar}
 \label{tab:flatgrp0201}
@@ -113,11 +113,11 @@ unP (P x) = x
 
 
 
-The current unification uses basic pattern matching to unify the terms 
+The current unification uses basic pattern matching to unify the terms
 
 
 \begin{minted}[linenos]{haskell}
-unify, unify_with_occurs_check :: MonadPlus m => Term -> Term 
+unify, unify_with_occurs_check :: MonadPlus m => Term -> Term
 -> m Unifier
 
 unify = fix unify'
@@ -129,22 +129,22 @@ unify_with_occurs_check =
  where
    occursIn t = everything (||) (mkQ False (==t))
 
-unify' :: MonadPlus m => (Term -> Term -> m Unifier) -> Term -> 
+unify' :: MonadPlus m => (Term -> Term -> m Unifier) -> Term ->
 Term -> m [(VariableName, Term)]
 
 -- If either of the terms are don't cares then no unifiers exist
 unify' _ Wildcard _ = return []
 unify' _ _ Wildcard = return []
 
--- If one is a variable then equate the term to its value which 
+-- If one is a variable then equate the term to its value which
 -- forms the unifier
 unify' _ (Var v) t  = return [(v,t)]
 unify' _ t (Var v)  = return [(v,t)]
 
--- Match the names and the length of their parameter list and 
--- then match the elements of list one by one. 
-unify' self (Struct a1 ts1) (Struct a2 ts2) 
-            | a1 == a2 && same length ts1 ts2 = 
+-- Match the names and the length of their parameter list and
+-- then match the elements of list one by one.
+unify' self (Struct a1 ts1) (Struct a2 ts2)
+            | a1 == a2 && same length ts1 ts2 =
             unifyList self (zip ts1 ts2)
 
 unify' _ _ _ = mzero
@@ -152,31 +152,31 @@ unify' _ _ _ = mzero
 same :: Eq b => (a -> b) -> a -> a -> Bool
 same f x y = f x == f y
 
--- Match the elements of each of the tuples in the list. 
-unifyList :: Monad m => (Term -> Term -> m Unifier) -> 
+-- Match the elements of each of the tuples in the list.
+unifyList :: Monad m => (Term -> Term -> m Unifier) ->
 [(Term, Term)] -> m Unifier
 unifyList _ [] = return []
 unifyList unify ((x,y):xys) = do
    u  <- unify x y
    u' <- unifyList unify (Prelude.map (both (apply u)) xys)
    return (u++u')
-\end{minted} 
+\end{minted}
 
 
 \section{Modifications}
 The resulting language is not far from what we did in \ref{proto1} apart from the fact that the \textit{Term} expressions are encapsulated
-to form \textit{Clauses} which in turn form a \textit{Program}. 
+to form \textit{Clauses} which in turn form a \textit{Program}.
 
 Moreover, the required instances make the language compatible with the unification procedure.
- 
+
 \begin{minted}[linenos]{haskell}
-data FTS a = FS Atom [a] | FV VariableName | FW | FC Int 
+data FTS a = FS Atom [a] | FV VariableName | FW | FC Int
                           deriving (Show, Eq, Typeable, Ord)
 
-newtype Prolog = P (Fix FTS) deriving (Eq, Show, Ord, Typeable) 
+newtype Prolog = P (Fix FTS) deriving (Eq, Show, Ord, Typeable)
 
 unP :: Prolog -> Fix FTS
-unP (P x) = x 
+unP (P x) = x
 
 instance Functor (FTS) where
   fmap              = T.fmapDefault
@@ -185,25 +185,25 @@ instance Foldable (FTS) where
   foldMap             = T.foldMapDefault
 
 instance Traversable (FTS) where
-    traverse f (FS atom xs)      =   FS atom <$> 
+    traverse f (FS atom xs)      =   FS atom <$>
     sequenceA (Prelude.map f xs)
     traverse _ (FV v)          =   pure (FV v)
     traverse _ FW         =   pure (FW)
     traverse _ (FC i)          =   pure (FC i)
 
 instance Unifiable (FTS) where
-  zipMatch (FS al ls) (FS ar rs) = 
-    if (al == ar) && (length ls == length rs) 
-      then FS al <$> pairWith (\l r -> Right (l,r)) ls rs     
+  zipMatch (FS al ls) (FS ar rs) =
+    if (al == ar) && (length ls == length rs)
+      then FS al <$> pairWith (\l r -> Right (l,r)) ls rs
       else Nothing
   zipMatch FW _ = Just FW
   zipMatch _ FW = Just FW
-  zipMatch (FC i1) (FC i2) = if (i1 == i2) 
-    then Just (FC i1) 
+  zipMatch (FC i1) (FC i2) = if (i1 == i2)
+    then Just (FC i1)
     else Nothing
 
 instance Applicative (FTS) where
-  pure x                  =   FS "" [x] 
+  pure x                  =   FS "" [x]
   _         <*>   FW    =   FW
   _       <*>   (FC i)     =   FC i
   _       <*>   (FV v)     = (FV v)
@@ -230,13 +230,13 @@ variableExtractor :: Fix FTS -> [Fix FTS]
 variableExtractor (Fix x) = case x of
   (FS _ xs)   ->  Prelude.concat $ Prelude.map variableExtractor xs
   (FV v)     ->  [Fix $ FV v]
-  _       ->  [] 
+  _       ->  []
 
 variableNameExtractor :: Fix FTS -> [VariableName]
 variableNameExtractor (Fix x) = case x of
   (FS _ xs) -> Prelude.concat $ Prelude.map variableNameExtractor xs
   (FV v)     -> [v]
-  _         -> [] 
+  _         -> []
 
 variableSet :: [Fix FTS] -> S.Set (Fix FTS)
 variableSet a = S.fromList a
@@ -252,15 +252,15 @@ varsToDictM set = foldrM addElt Map.empty set where
     return $! Map.insert sv iv dict
 
 
-uTermify 
-  :: Map VariableName (ST.STVar s (FTS)) 
-  -> UTerm FTS (ST.STVar s (FTS)) 
+uTermify
+  :: Map VariableName (ST.STVar s (FTS))
+  -> UTerm FTS (ST.STVar s (FTS))
   -> UTerm FTS (ST.STVar s (FTS))
 uTermify varMap ux = case ux of
   UT.UVar _             -> ux
   UT.UTerm (FV v)       -> maybe (error "bad map") UT.UVar $ Map.lookup v varMap
  -- UT.UTerm t            -> UT.UTerm $! fmap (uTermify varMap) t
-  UT.UTerm (FS a xs)    -> UT.UTerm $ FS a $! fmap (uTermify varMap) xs   
+  UT.UTerm (FS a xs)    -> UT.UTerm $ FS a $! fmap (uTermify varMap) xs
   UT.UTerm (FW)         -> UT.UTerm FW
   UT.UTerm (FC i)       -> UT.UTerm (FC i)
 
@@ -289,7 +289,7 @@ vTermify dict t1 = case t1 of
       FV iv   -> t1
       _       -> UT.UTerm . fmap (vTermify dict) $ r
 
-translateFromUTerm :: 
+translateFromUTerm ::
     Map VariableName (ST.STVar s (FTS)) ->
     UT.UTerm (FTS) (ST.STVar s (FTS)) -> Prolog
 translateFromUTerm dict uTerm =
@@ -331,7 +331,7 @@ mapWithKeyM :: (Ord k,Applicative m,Monad m)
 mapWithKeyM = Map.traverseWithKey
 
 
-makeDict :: 
+makeDict ::
             Map VariableName (ST.STVar s (FTS)) -> ST.STBinding s (Map VariableName (Prolog))
 makeDict sVarDict =
     flip mapWithKeyM sVarDict $ \ _ -> \ iKey -> do
@@ -342,7 +342,7 @@ makeDict sVarDict =
 -- | recover the bindings for the variables of the two terms
 -- unified from the monad.
 
-makeDicts :: 
+makeDicts ::
     (Map VariableName (ST.STVar s (FTS)), Map VariableName (ST.STVar s (FTS))) ->
     ExceptT  (UT.UFailure (FTS) (ST.STVar s (FTS)))
     (ST.STBinding s) (Map VariableName (Prolog))
@@ -361,9 +361,9 @@ Take original expressions flatten fix convert unify
 run it STBinding monad to extract substitutions.
 
 \begin{minted}[linenos]{haskell}
-monadicUnification :: (BindingMonad FTS (STVar s FTS) 
-(ST.STBinding s)) 
-=> (forall s. ((Fix FTS) -> (Fix FTS) -> 
+monadicUnification :: (BindingMonad FTS (STVar s FTS)
+(ST.STBinding s))
+=> (forall s. ((Fix FTS) -> (Fix FTS) ->
   ErrorT (UT.UFailure (FTS) (ST.STVar s (FTS)))
            (ST.STBinding s) (UT.UTerm (FTS) (ST.STVar s (FTS)),
             Map VariableName (ST.STVar s (FTS)))))
@@ -402,18 +402,18 @@ f1 ::
      )
 f1 dict = do
   let ld1 = Map.toList dict
-  ld2 <- Control.Monad.Error.sequence 
+  ld2 <- Control.Monad.Error.sequence
   [ v1 | (k,v) <- ld1, let v1 = UT.lookupVar v]
   let ld3 = [ (k,v) | ((k,_),Just v) <- ld1 `zip` ld2]
-      ld4 = [ (k,v) | (k,v2) <- ld3, 
+      ld4 = [ (k,v) | (k,v2) <- ld3,
       let v = translateFromUTerm dict v2 ]
   return ld4
   unifierConvertor :: [(VariableName, Prolog)] -> Unifier
-  unifierConvertor xs = Prelude.map (\(v, p) -> (v, (unFlatten $ unP $ p))) xs 
-   
+  unifierConvertor xs = Prelude.map (\(v, p) -> (v, (unFlatten $ unP $ p))) xs
+
 unify :: MonadPlus m => Term -> Term -> m Unifier
 unify t1 t2 = unifierConvertor (goUnify (monadicUnification (termFlattener t1) (termFlattener t2)))
-  
+
 \end{minted}
 
 
@@ -422,7 +422,7 @@ unify t1 t2 = unifierConvertor (goUnify (monadicUnification (termFlattener t1) (
 
 It works,
 
- 
+
 
 \section{Chapter Recap}
 
