--- a/pwp.tex
+++ b/pwp.tex
@@ -51,7 +51,7 @@ Variables are denoted by a string consisting of letters, numbers and underscore 
 underscore. Variables closely resemble variables in logic in that they are placeholders for arbitrary terms. A variable can become 
 instantiated (bound to equal a specific term) via unification.
 
-A compound term is composed of an atom called a "functor" and a number of "arguments", which are again terms. Compound terms are ordinarily 
+A compound term is composed of an atom called a \yyy{"}{``}functor\yyy{"}{''} and a number of \yyy{"}{``}arguments\yyy{"}{''}, which are again terms. Compound terms are ordinarily 
 written as a functor followed by a comma-separated list of argument terms, which is contained in parentheses. The number of arguments is 
 called the term's arity. An atom can be regarded as a compound term with arity zero.
 
@@ -173,7 +173,7 @@ First of all I will only advocate the use of pure prolog - that means no recursi
 
 A prolog equivalent is pervasively used everywhere right under everyone's nose - sql. Pure prolog is almost exactly the same as relational database sql, except that sql has a much worse syntax and requires declaring column names. Column names are a necessary thing for sql's use case (use by many programmers/dba's over the years), but there is no excuse for the sql syntax (attempts were made in the past to get relational databbases to get prolog syntax in the form of datalog but to no avail).
 
-Business rules engines used in many "enterprise" application servers are also shoddy versions of prolog (when they're backward chaining. Forward chaining is inferior to backward chaining, which implies that all these rules engines should be embedded prolog's if the implementors had bothered to study up history).
+Business rules engines used in many \yyy{"}{``}enterprise\yyy{"}{''} application servers are also shoddy versions of prolog (when they're backward chaining. Forward chaining is inferior to backward chaining, which implies that all these rules engines should be embedded prolog's if the implementors had bothered to study up history).
 
 Sparql is also prolog, except that you can only have facts (predicates) with three arguments.
 
@@ -225,7 +225,7 @@ You could even write your program in a spreadsheet, export as csv, and convert t
 
 What this means is that most/all of your program can be written by a nonprogrammer (similar to how cobol and sql were intended, except that it has a better chance of working this time because the greater inherent simplicity of the syntax).
 
-4) When you program in prolog, you're almost always just creating a description of the world in small "orthogonal" chunks without any concious effort to do so. In functional programming there are builtin "orthogonals", like map/filter etc, but most of the time you have to work very hard to make sure you're writing elegant concise code.
+4) When you program in prolog, you're almost always just creating a description of the world in small \yyy{"}{``}orthogonal\yyy{"}{''} chunks without any concious effort to do so. In functional programming there are builtin \yyy{"}{``}orthogonals\yyy{"}{''}, like map/filter etc, but most of the time you have to work very hard to make sure you're writing elegant concise code.
 
 Good functional programmers keep refactoring their code sitting in their repl. Prolog programs just seem to pour out in a concise form that is the only way it can be written. If this seems miraculous - just imagine that you're actually writing sql code.
 There is only one obvious way to write a sql query (forget performance concerns - you're not managing millions of rows of data as you are in an actual sql database).
