Work on background, introduction, proposedWork, and toDo.

--- a/toDo.tex
+++ b/toDo.tex
@@ -249,5 +249,32 @@ Here are some potential keywords from Chapter 2:
 
 What is the overall message?
 
+\paragraph{A List of Colloquialisms}
+\begin{enumerate}
+\item
+  ``Recap'' should be ``recapitulation''.
+\item
+  Some expressions indicating change over time, for instance:
+  \begin{compactitem}
+  \item
+    day by day
+  \item
+    over the years
+  \item
+    many times
+  \item
+    \dots
+  \end{compactitem}
+  are not in themselves problematic, but sometimes can be replaced by
+  more precise language.
+\item
+  ``flipping the coin to the other side''---perhaps ``conversely''?
+\item 
+  bringing \dots{} onto the same plate.
+\item
+  job at hand
+\item
+  faded out (when used metaphorically).
+\end{enumerate}
 
 \end{scope}
