--- a/proposedWork.tex
+++ b/proposedWork.tex
@@ -7,44 +7,70 @@
 \chapter{Accomplished Work}\label{chap:proposedWork}
 %-----------------------------------------------------------------------------
 
+\textcolor{blue}{\textsl{I suspect that the title of this chapter needs to change.}}
+
 \section{What is this chapter about}
 
------------------------------------------------------------------------------
+\textcolor{blue}{\textsl{I need this information.
+    I do not know what you are trying to do here.
+}}
+
+%-----------------------------------------------------------------------------
+\noindent\rule{\textwidth}{0.5pt}
 
 
-\section{Current Work}
+\section{\protect{\yyy{Current Work}{Existing Work by Others}}}
 
-There have been several attempts at embedding \progLang{Prolog} into \progLang{Haskell} which are discussed below along with the
-shortcomings.
+There have been several attempts at embedding \progLang{Prolog} into \progLang{Haskell}\yyy{}{\large,} which are
+discussed below\yyy{}{\large,} along with \yyy{the}{their} shortcomings.
 
 \begin{enumerate}
-\item Very few embedded implementations exist which offer a perspective into the job at hand. One of the earliest implementations
-\cite{website:mini-prolog-hugs98} is for an older specification of \progLang{Haskell} called \progLang{Haskell 98}
-\texttt{\bfseries{hugs}}. It is more of a proof of concept providing a mechanism to include variable search strategies in order to produce
-a result. Another implementation \cite{website:takashi-workplace} based of it simplifies the notation to a list format. Nonetheless, both
-implementations lack simplicity and support for basic \progLang{Prolog} features such as \textit{cuts, fails, assert} among others.
+\item
+  Very few embedded implementations exist which offer a perspective into the job at hand.
+  One of the earliest implementations \cite{website:mini-prolog-hugs98} is for an older specification of
+  \progLang{Haskell} called \progLang{Haskell 98} \texttt{\bfseries{hugs}}.
+  It is more of a proof of concept providing a mechanism to include variable search strategies in order to produce
+  a result.
+  Another implementation \cite{website:takashi-workplace} based of it simplifies the notation to a list format.
+  Nonetheless, both implementations lack simplicity and support for basic \progLang{Prolog} features such as
+  \textit{cuts, fails, assert} among others.
 
 \begin{comment}
-\item Only two embeddings exist, one of them is old and made for \texttt{\bfseries{hugs}} a functional programming system based on the
-\progLang{Haskell 98} specification. It is complex and also lacks a lot of \progLang{Prolog} like features including \textit{cuts, fails,
-assert} among others. The second one is based off the first one to make it simple but it loses the variable search strategy support which
-allows the programmer to choose the manner in which a solution is produced.
+\item
+  Only two embeddings exist, one of them is old and made for \texttt{\bfseries{hugs}} a functional programming
+  system based on the \progLang{Haskell 98} specification.
+  It is complex and also lacks a lot of \progLang{Prolog} like features including \textit{cuts, fails, assert}
+  among others.
+  The second one is based off the first one to make it simple but it loses the variable search strategy support
+  which allows the programmer to choose the manner in which a solution is produced.
 \end{comment}
 
-\item The papers that try to take the above further are also few in number and do not have any implementations with the proposed
-concepts. Moreover, none of them are complete and most lack many practical parts of \progLang{Prolog}.
+\item
+  The papers that try to take the above further are also few in number and do not have any implementations with the
+  proposed concepts.\endnote{%
+    Provide citations here.
+}
+  Moreover, none of them are complete and most lack many practical parts of \progLang{Prolog}.
 
-\item In the case of libraries, a few exist, most are old and are not currently maintained or updated. Many provide only a shell through which one has to do all the work,
-which is synonymous with the embeddings mentioned above. Some are far more feature rich than others that is with some practical \progLang{Prolog}
-concepts, but are not complete.
+\item
+  In the case of libraries, a few exist, most are old and are not currently maintained or updated.
+  Many provide only a shell through which one has to do all the work, which is synonymous with the embeddings
+  mentioned above.
+  Some are far more feature rich than others that is with some practical \progLang{Prolog} concepts, but are not
+  complete.
 
-\item Moreover, none of the above have full list support that exist in \progLang{Prolog}.
+\item
+  Moreover, none of the above have full list support that exist in \progLang{Prolog}.\endnote{%
+    What does this point mean?
+}
 \end{enumerate}
 
 And as far as the idea of merging paradigms goes, it is not the main focus of this thesis and can be more of an
 \yyy{"}{``}add-on\yyy{"}{''}.
 A handful of crossover hybrid languages based on \progLang{Haskell} exist, \progLang{Curry} \cite{website:curry}
-being the prominent one.
+being the prominent one.\endnote{%
+  I think that this fits in with the discussion of \progLang{Scala} in the previous chapter.
+}
 Moving away from \progLang{Haskell} and exploring other languages from different paradigms, a respectable number of
 crossover implementations exist but again most of them have faded out.
 
@@ -58,12 +84,19 @@ Mostly the trend is to build a library for extension to replicate the features a
 
 \section{Contributions}
 
-Taking into consideration above, there is quite some room for improvement and additions.
+Taking into consideration above, there is quite some room for improvement and additions.\endnote{%
+  This is a good bridging sentence, but should probably end the last section, rather than begin this one.
+}
 Moving onto what this thesis shall explore, first thing's first a complete, fully functional library which comes
 close to a \progLang{Prolog} like language and has practical abilities to carry out real-world tasks.
 They include predicates like \textit{cut, assert, fail, setOf, bagOf} among others.
-This would form the first stage of the implementation.
-Secondly, exploring aspects such as \textit{assert} and database capabilities.
+This would form\endnote{%
+  Not ``would form''.  ``forms'' perhaps.  You are talking about what \textbf{is} in the thesis.
+}
+the first stage of the implementation.
+Secondly, exploring aspects such as \textit{assert} and database capabilities.\endnote{%
+  Strike this?
+}
 A third question to address is the accommodation of input and output, specifically dealing with the \textit{IO
   Monad} in \progLang{Haskell} with \progLang{Prolog} \textit{IO}.
 Moreover, \progLang{Prolog} is an untyped language which allows lists with elements of different types to be
@@ -78,12 +111,12 @@ Lastly, how would characteristics of hybrid languages fit into and play a role i
 \begin{enumerate}
 \item
   Most languages have a recursive abstract syntax which restricts the eDSL in terms of its capability to
-  \textit{open up} the language i.e.
-  to include meta syntactic variables, adding custom quantifiers and logic.
+  \textit{open up} the language\yyy{}{\large,} i.e.\yyy{}{\large,}
+  to include meta syntactic variables, \xxx{adding} custom quantifiers and logic.
   (\chapterReference{proto1}{Prototype 1}) provides a methodology to convert a language whose recursive abstract
   syntax is represented by a tree into a non-recursive version whose fixed point is isomorphically equivalent to
   the original type.
-  One of the outcomes is a polymorphically typed embedded language within \progLang{Haskell}
+  One of the outcomes is a \yyy{}{producing a }polymorphically typed embedded language within \progLang{Haskell}\yyy{}{\Large.}
 
   To test it out we adopt the closed \progLang{Prolog} like language defined in \cite{prolog-lib} and open it up.
   And for the unification part we use \cite{unification-fd-lib}, which provides a generic unification algorithm
