some more quotes.

--- a/embedding.tex
+++ b/embedding.tex
@@ -322,7 +322,7 @@ Not related to the topic.
 The above gives a compositional approach to transform logical programs ????
 \\*Only generalisation and tupling are required to derive Herbrand Model of the two programs?????
 \\* Standard dfs approach does not give any clear measure of computational complexity.
-\\* The Algebra of Functional Programs says that the functions \textit{foldl} and \textit{foldr} give a general transformation strategy, i.e. with higher order functions. This paper takes the above results and tries to apply it to Logic Programming by translating Prolog programs into Haskell programs which helps in "Reasoning" and "Higher Order Predicates can  be implemented as Higher Order Functions". Moreover with Higher Order Functions we do not need Higher Order Unification. With all of the stuff from \cite{spivey1999embedding}, and the proof of uniqueness of fixed points ???? in
+\\* The Algebra of Functional Programs says that the functions \textit{foldl} and \textit{foldr} give a general transformation strategy, i.e. with higher order functions. This paper takes the above results and tries to apply it to Logic Programming by translating Prolog programs into Haskell programs which helps in \yyy{"}{``}Reasoning\yyy{"}{''} and \yyy{"}{``}Higher Order Predicates can  be implemented as Higher Order Functions\yyy{"}{''}. Moreover with Higher Order Functions we do not need Higher Order Unification. With all of the stuff from \cite{spivey1999embedding}, and the proof of uniqueness of fixed points ???? in
 \cite{seres2001algebra} ???.
 
 The paper gives two examples of a program with two variants differing in complexity, but are proved to be \yyy{"}{``}equal\yyy{"}{''}.
